[gd_scene load_steps=2 format=3 uid="uid://rn2iwoglqb3t"]

[ext_resource type="Script" path="res://MyScene.gd" id="1"]

[node name="MyScene" type="Node2D"]
script = ExtResource("1")

[node name="TextContainer" type="RichTextLabel" parent="."]
offset_right = 1016.0
offset_bottom = 238.0

[node name="OptionContainer" type="VBoxContainer" parent="."]
offset_top = 211.0
offset_right = 1000.0
offset_bottom = 529.0

[node name="SaveButton" type="Button" parent="."]
offset_left = 960.0
offset_top = 568.0
offset_right = 1001.0
offset_bottom = 588.0
text = "Save"
